컴포넌트 완성 및 레이아웃 살짝

--- a/component.html
+++ b/component.html
@@ -15,18 +15,64 @@
       <div class="price">1000원</div>
     </button>
     <button class="cola" type="button" disabled>
-      <img src="./img/cola-purple.svg" alt="cola-red" />
+      <img src="./img/cola-violet.svg" alt="cola-red" />
       <p>Violet_Cola</p>
       <div class="price">1000원</div>
       <div class="sold-out-box"></div>
       <div class="sold-out">품절</div>
     </button>
     <button class="cola" type="button">
-      <img src="./img/cola-purple.svg" alt="cola-red" />
-      <p>Violet_Cola</p>
+      <img src="./img/cola-yellow.svg" alt="cola-red" />
+      <p>Yellow_Cola</p>
       <div class="price">1000원</div>
       <div class="sold-out-box"></div>
       <div class="sold-out">품절</div>
     </button>
+    <button class="cola" type="button">
+      <img src="./img/cola-cool.svg" alt="cola-red" />
+      <p>Cool_Cola</p>
+      <div class="price">1000원</div>
+      <div class="sold-out-box"></div>
+      <div class="sold-out">품절</div>
+    </button>
+    <button class="cola" type="button">
+      <img src="./img/cola-green.svg" alt="cola-red" />
+      <p>Green_Cola</p>
+      <div class="price">1000원</div>
+      <div class="sold-out-box"></div>
+      <div class="sold-out">품절</div>
+    </button>
+    <button class="cola" type="button">
+      <img src="./img/cola-orange.svg" alt="cola-red" />
+      <p>Orange_Cola</p>
+      <div class="price">1000원</div>
+      <div class="sold-out-box"></div>
+      <div class="sold-out">품절</div>
+    </button>
+    <div class="white">
+      <div class="price-box left-over">
+        <p>잔액 :</p>
+        <p>1,000 원</p>
+      </div>
+      <div class="price-box having">
+        <p>소지금 :</p>
+        <p>25,000 원</p>
+      </div>
+    </div>
+
+    <div class="drink-list list-original get">
+      <p>Original_Cola</p>
+      <div class="drink-count">2</div>
+    </div>
+    <div class="drink-list list-violet select">
+      <p>Violet_Cola</p>
+      <div class="drink-count">2</div>
+    </div>
+
+    <button class="btn-changes" type="button">거스름돈 반환</button>
+    <button class="btn-deposit" type="button">입금</button>
+    <button class="btn-get" type="button">획득</button>
+    <label class="a11y-hidden" for="deposit">입금액 입력</label>
+    <input id="deposit" type="number" placeholder="입금액 입력" />
   </body>
 </html>
