--- a/index.html
+++ b/index.html
@@ -12,25 +12,16 @@
   <body>
     <header class="header-wrap">
       <a class="logo">
-        <h1>
-          <img src="/img/logo.svg" alt="logo" />
-        </h1>
+        <h1 class="a11y-hidden">벤딩머신</h1>
+        <img src="/img/logo.svg" alt="logo" />
       </a>
     </header>
     <main class="container">
-      <section class="vending-machine">
-        <div class="menu">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-        </div>
-        ...
+      <section class="vending-machine">자판기</section>
+      <section class="sub-container">
+        <div class="pocket">소지금</div>
+        <div class="vending-result">획득음료</div>
       </section>
-      <div class="pocket">...</div>
-      <div class="vending-result">...</div>
     </main>
   </body>
 </html>
