--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header-wrap">
       <a class="logo">
         <h1 class="a11y-hidden">벤딩머신</h1>
-        <img src="/img/logo.svg" alt="logo" />
+        <img src="./img/logo.svg" alt="logo" />
       </a>
     </header>
     <main class="l_container">
