--- a/index.html
+++ b/index.html
@@ -4,121 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>밴딩머신</title>
-    <link rel="stylesheet" href="style/normalize.css" />
-    <link rel="stylesheet" href="style/componet.css" />
-    <link rel="stylesheet" href="style/style.css" />
+    <title>벤딩머신</title>
+    <link rel="stylesheet" href="./style/normalize.css" />
+    <link rel="stylesheet" href="./style/component.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
-
   <body>
-    <header class="header-wrap">
-      <a class="logo">
+    <header class="header">
+      <a href="#" class="logo">
         <h1 class="a11y-hidden">벤딩머신</h1>
         <img src="./img/logo.svg" alt="logo" />
       </a>
     </header>
-    <main class="l_container">
-      <section class="vending-machine">
-        <div class="main-container">
-          <button class="cola" type="button">
-            <img src="./img/cola-red.svg" alt="cola-red" />
-            <p>Original_Cola</p>
-            <div class="price">1000원</div>
-          </button>
-          <button class="cola" type="button" disabled>
-            <img src="./img/cola-violet.svg" alt="cola-red" />
-            <p>Violet_Cola</p>
-            <div class="price">1000원</div>
-            <div class="sold-out-box"></div>
-            <div class="sold-out">품절</div>
-          </button>
-          <button class="cola" type="button">
-            <img src="./img/cola-yellow.svg" alt="cola-red" />
-            <p>Yellow_Cola</p>
-            <div class="price">1000원</div>
-            <div class="sold-out-box"></div>
-            <div class="sold-out">품절</div>
-          </button>
-          <button class="cola" type="button">
-            <img src="./img/cola-cool.svg" alt="cola-red" />
-            <p>Cool_Cola</p>
-            <div class="price">1000원</div>
-            <div class="sold-out-box"></div>
-            <div class="sold-out">품절</div>
-          </button>
-          <button class="cola" type="button">
-            <img src="./img/cola-green.svg" alt="cola-red" />
-            <p>Green_Cola</p>
-            <div class="price">1000원</div>
-            <div class="sold-out-box"></div>
-            <div class="sold-out">품절</div>
-          </button>
-          <button class="cola" type="button">
-            <img src="./img/cola-orange.svg" alt="cola-red" />
-            <p>Orange_Cola</p>
-            <div class="price">1000원</div>
-            <div class="sold-out-box"></div>
-            <div class="sold-out">품절</div>
-          </button>
-          <div class="control">
-            <div class="price-box left-over">
-              <p>잔액 :</p>
-              <p>1,000 원</p>
-            </div>
-            <button class="btn-changes" type="button">거스름돈 반환</button>
-            <label class="a11y-hidden" for="deposit">입금액 입력</label>
-            <input id="deposit" type="number" placeholder="입금액 입력" />
-            <button class="btn-deposit" type="button">입금</button>
-            <div class="drink-list-container pick">
-              <div class="drink-list list-original select">
-                <p>Original_Cola</p>
-                <div class="drink-count">2</div>
-              </div>
-              <div class="drink-list list-original select">
-                <p>Original_Cola</p>
-                <div class="drink-count">2</div>
-              </div>
-              <div class="drink-list list-original select">
-                <p>Original_Cola</p>
-                <div class="drink-count">2</div>
-              </div>
-            </div>
-            <button class="btn-get" type="button">획득</button>
-          </div>
-        </div>
+    <div class="container">
+      <section class="left-wrapper">
+        <ul class="cola-box">
+          <li>
+            <input type="checkbox" id="original" />
+            <label for="original">
+              <img src="./img/cola-original.svg" alt="original" />
+              <p class="name">Original_Cola</p>
+              <p class="price">1000원</p>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="violet" disabled />
+            <label for="violet">
+              <img src="./img/cola-violet.svg" alt="original" />
+              <p class="name">Violet_Cola</p>
+              <p class="price">1000원</p>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="yellow" />
+            <label for="yellow">
+              <img src="./img/cola-yellow.svg" alt="original" />
+              <p class="name">Yellow_Cola</p>
+              <p class="price">1000원</p>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="cool" />
+            <label for="cool">
+              <img src="./img/cola-cool.svg" alt="original" />
+              <p class="name">Cool_Cola</p>
+              <p class="price">1000원</p>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="green" />
+            <label for="green">
+              <img src="./img/cola-green.svg" alt="original" />
+              <p class="name">Green_Cola</p>
+              <p class="price">1000원</p>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="orange" />
+            <label for="orange">
+              <img src="./img/cola-orange.svg" alt="original" />
+              <p class="name">Orange_Cola</p>
+              <p class="price">1000원</p>
+            </label>
+          </li>
+        </ul>
+        <p>잔액 :</p>
+        <p>1,000원</p>
       </section>
-      <section class="sub-container">
+      <section class="right-wrapper">
         <div class="wallet">
-          <div class="price-box having">
+          <div class="money-box large">
             <p>소지금 :</p>
-            <p>25,000 원</p>
+            <p><strong>25,000원</strong></p>
           </div>
         </div>
-        <div class="vending-result">
+        <div class="cola-list">
           <h2>획득한 음료</h2>
-          <div class="drink-list-container result">
-            <div class="drink-list list-original get">
-              <p>Original_Cola</p>
-              <div class="drink-count">2</div>
+          <div class="cola-get">
+            <div class="cola get">
+              <p class="name">Original_Cola</p>
+              <p class="count">2</p>
             </div>
-            <div class="drink-list list-cool get">
-              <p>Cool_Cola</p>
-              <div class="drink-count">1</div>
+            <div class="cola get">
+              <p class="name">Original_Cola</p>
+              <p class="count">2</p>
             </div>
-            <div class="drink-list list-violet get">
-              <p>Violet_Cola</p>
-              <div class="drink-count">3</div>
-            </div>
-            <div class="drink-list list-green get">
-              <p>Green_Cola</p>
-              <div class="drink-count">3</div>
-            </div>
-          </div>
-          <div class="sum-result">
-            <p>총 금액 : 9,000원</p>
           </div>
         </div>
       </section>
-    </main>
+    </div>
   </body>
 </html>
