--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <div class="container">
       <section class="left-wrapper">
+        <h2 class="a11y-hidden">콜라 종류</h2>
         <ul class="cola-box">
           <li>
             <input type="checkbox" id="original" />
@@ -97,13 +98,14 @@
       </section>
       <section class="right-wrapper">
         <div class="wallet">
+          <h2 class="a11y-hidden">소지금</h2>
           <div class="money-box large">
             <p>소지금 :</p>
             <p><strong>25,000원</strong></p>
           </div>
         </div>
         <div class="cola-list">
-          <h2>획득한 음료</h2>
+          <h3>획득한 음료</h3>
           <div class="cola-get large">
             <div class="cola get original">
               <p class="name">Original_Cola</p>
