label 안 p 요소 span으로 변경

--- a/index.html
+++ b/index.html
@@ -19,58 +19,58 @@
     <div class="container">
       <section class="left-wrapper">
         <h2 class="a11y-hidden">콜라 종류</h2>
-        <form action=" ">
-          <ul class="cola-box">
-            <li>
-              <input type="checkbox" id="original" />
-              <label for="original">
-                <img src="./img/cola-original.svg" alt="original" />
-                <p class="name">Original_Cola</p>
-                <p class="price">1000원</p>
-              </label>
-            </li>
-            <li>
-              <input type="checkbox" id="violet" disabled />
-              <label for="violet">
-                <img src="./img/cola-violet.svg" alt="original" />
-                <p class="name">Violet_Cola</p>
-                <p class="price">1000원</p>
-              </label>
-            </li>
-            <li>
-              <input type="checkbox" id="yellow" />
-              <label for="yellow">
-                <img src="./img/cola-yellow.svg" alt="original" />
-                <p class="name">Yellow_Cola</p>
-                <p class="price">1000원</p>
-              </label>
-            </li>
-            <li>
-              <input type="checkbox" id="cool" />
-              <label for="cool">
-                <img src="./img/cola-cool.svg" alt="original" />
-                <p class="name">Cool_Cola</p>
-                <p class="price">1000원</p>
-              </label>
-            </li>
-            <li>
-              <input type="checkbox" id="green" />
-              <label for="green">
-                <img src="./img/cola-green.svg" alt="original" />
-                <p class="name">Green_Cola</p>
-                <p class="price">1000원</p>
-              </label>
-            </li>
-            <li>
-              <input type="checkbox" id="orange" />
-              <label for="orange">
-                <img src="./img/cola-orange.svg" alt="original" />
-                <p class="name">Orange_Cola</p>
-                <p class="price">1000원</p>
-              </label>
-            </li>
-          </ul>
-        </form>
+
+        <ul class="cola-box">
+          <li>
+            <input type="checkbox" id="original" />
+            <label for="original">
+              <img src="./img/cola-original.svg" alt="original" />
+              <span class="name">Original_Cola</span>
+              <span class="price">1000원</span>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="violet" disabled />
+            <label for="violet">
+              <img src="./img/cola-violet.svg" alt="original" />
+              <span class="name">Violet_Cola</span>
+              <span class="price">1000원</span>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="yellow" />
+            <label for="yellow">
+              <img src="./img/cola-yellow.svg" alt="original" />
+              <span class="name">Yellow_Cola</span>
+              <span class="price">1000원</span>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="cool" />
+            <label for="cool">
+              <img src="./img/cola-cool.svg" alt="original" />
+              <span class="name">Cool_Cola</span>
+              <span class="price">1000원</span>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="green" />
+            <label for="green">
+              <img src="./img/cola-green.svg" alt="original" />
+              <span class="name">Green_Cola</span>
+              <span class="price">1000원</span>
+            </label>
+          </li>
+          <li>
+            <input type="checkbox" id="orange" />
+            <label for="orange">
+              <img src="./img/cola-orange.svg" alt="original" />
+              <span class="name">Orange_Cola</span>
+              <span class="price">1000원</span>
+            </label>
+          </li>
+        </ul>
+
         <div class="grid-container">
           <div class="money-box small grid-a">
             <p>잔액 :</p>
