--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         <h1 class="a11y-hidden">벤딩머신</h1>
         <img src="./img/logo.svg" alt="logo" />
       </a>
