void elements trailing slash delete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <a href="index.html" class="logo">
         <h1 class="a11y-hidden">벤딩머신</h1>
-        <img src="./img/logo.svg" alt="logo" />
+        <img src="./img/logo.svg" alt="logo">
       </a>
     </header>
     <div class="container">
@@ -22,49 +22,49 @@
 
         <ul class="cola-box">
           <li>
-            <input type="checkbox" id="original" />
+            <input type="checkbox" id="original">
             <label for="original">
-              <img src="./img/cola-original.svg" alt="original" />
+              <img src="./img/cola-original.svg" alt="original">
               <span class="name">Original_Cola</span>
               <span class="price">1000원</span>
             </label>
           </li>
           <li>
-            <input type="checkbox" id="violet" disabled />
+            <input type="checkbox" id="violet" disabled>
             <label for="violet">
-              <img src="./img/cola-violet.svg" alt="original" />
+              <img src="./img/cola-violet.svg" alt="original">
               <span class="name">Violet_Cola</span>
               <span class="price">1000원</span>
             </label>
           </li>
           <li>
-            <input type="checkbox" id="yellow" />
+            <input type="checkbox" id="yellow">
             <label for="yellow">
-              <img src="./img/cola-yellow.svg" alt="original" />
+              <img src="./img/cola-yellow.svg" alt="original">
               <span class="name">Yellow_Cola</span>
               <span class="price">1000원</span>
             </label>
           </li>
           <li>
-            <input type="checkbox" id="cool" />
+            <input type="checkbox" id="cool">
             <label for="cool">
-              <img src="./img/cola-cool.svg" alt="original" />
+              <img src="./img/cola-cool.svg" alt="original">
               <span class="name">Cool_Cola</span>
               <span class="price">1000원</span>
             </label>
           </li>
           <li>
-            <input type="checkbox" id="green" />
+            <input type="checkbox" id="green">
             <label for="green">
-              <img src="./img/cola-green.svg" alt="original" />
+              <img src="./img/cola-green.svg" alt="original">
               <span class="name">Green_Cola</span>
               <span class="price">1000원</span>
             </label>
           </li>
           <li>
-            <input type="checkbox" id="orange" />
+            <input type="checkbox" id="orange">
             <label for="orange">
-              <img src="./img/cola-orange.svg" alt="original" />
+              <img src="./img/cola-orange.svg" alt="original">
               <span class="name">Orange_Cola</span>
               <span class="price">1000원</span>
             </label>
