--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>
           <input type="checkbox" id="original">
           <label for="original">
-            <img src="./img/cola-original.svg" alt="original">
+            <img src="./img/cola-original.svg" alt="original-cola">
             <span class="name">Original_Cola</span>
             <span class="price">1000원</span>
           </label>
@@ -34,7 +34,7 @@
         <li>
           <input type="checkbox" id="violet" disabled>
           <label for="violet">
-            <img src="./img/cola-violet.svg" alt="original">
+            <img src="./img/cola-violet.svg" alt="violet-cola">
             <span class="name">Violet_Cola</span>
             <span class="price">1000원</span>
           </label>
@@ -42,7 +42,7 @@
         <li>
           <input type="checkbox" id="yellow">
           <label for="yellow">
-            <img src="./img/cola-yellow.svg" alt="original">
+            <img src="./img/cola-yellow.svg" alt="yellow-cola">
             <span class="name">Yellow_Cola</span>
             <span class="price">1000원</span>
           </label>
@@ -50,7 +50,7 @@
         <li>
           <input type="checkbox" id="cool">
           <label for="cool">
-            <img src="./img/cola-cool.svg" alt="original">
+            <img src="./img/cola-cool.svg" alt="cool-cola">
             <span class="name">Cool_Cola</span>
             <span class="price">1000원</span>
           </label>
@@ -58,7 +58,7 @@
         <li>
           <input type="checkbox" id="green">
           <label for="green">
-            <img src="./img/cola-green.svg" alt="original">
+            <img src="./img/cola-green.svg" alt="green-cola">
             <span class="name">Green_Cola</span>
             <span class="price">1000원</span>
           </label>
@@ -66,7 +66,7 @@
         <li>
           <input type="checkbox" id="orange">
           <label for="orange">
-            <img src="./img/cola-orange.svg" alt="original">
+            <img src="./img/cola-orange.svg" alt="orange-cola">
             <span class="name">Orange_Cola</span>
             <span class="price">1000원</span>
           </label>
