스크롤바 추가

--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
             <p class="name">Violet_Cola</p>
             <p class="count">5</p>
           </div>
+          <div class="cola get violet">
+            <p class="name">Violet_Cola</p>
+            <p class="count">5</p>
+          </div>
+          <div class="cola get violet">
+            <p class="name">Violet_Cola</p>
+            <p class="count">5</p>
+          </div>
+          <div class="cola get violet">
+            <p class="name">Violet_Cola</p>
+            <p class="count">5</p>
+          </div>
+          <div class="cola get violet">
+            <p class="name">Violet_Cola</p>
+            <p class="count">5</p>
+          </div>
+          <div class="cola get violet">
+            <p class="name">Violet_Cola</p>
+            <p class="count">5</p>
+          </div>
         </div>
         <p class="total">총 금액 : 9,000원</p>
       </div>
