--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ko-KR">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>벤딩머신</title>
-  <link rel="stylesheet" href="./style/normalize.css" />
-  <link rel="stylesheet" href="./style/component.css" />
-  <link rel="stylesheet" href="./style/style.css" />
+  <link rel="stylesheet" href="./style/normalize.css">
+  <link rel="stylesheet" href="./style/component.css">
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
           <p>1,000원</p>
         </div>
         <button class="grid-b">거스름돈 반환</button>
-        <input class="grid-c" type="number" id="deposit" placeholder="입금액 입력" />
+        <input class="grid-c" type="number" id="deposit" placeholder="입금액 입력">
         <label class="a11y-hidden" for="deposit">입금액 입력</label>
         <button class="grid-d">입금</button>
         <div class="cola-get small grid-e">
